--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
+@font-face {
+    font-family: 'MasonChronicles';
+    src: url('../fonts/MasonChronicles.woff') format('woff'), url('../fonts/MasonChronicles.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background: #141218;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    color: #ffffff;
 }
 
 .container {
@@ -11,9 +22,97 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 60px;
+    margin-bottom: 90px;
 }
 
-.menu-list{
+.menu-list {
     margin-right: auto;
     margin-left: 67px;
+}
+
+.menu-list-item {
+    font-size: 14px;
+    line-height: 16px;
+    text-decoration: none;
+    margin-right: 24px;
+}
+
+.social-link {
+    margin-left: 20px;
+    text-decoration: none;
+}
+
+.main-content {
+    display: flex;
+    align-items: center;
+}
+
+.genre {
+    font-size: 14px;
+    line-height: 16px;
+    display: block;
+    margin-bottom: 16px;
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+}
+
+.rating-number {
+    font-size: 12px;
+    line-height: 14px;
+    margin-left: 10px;
+}
+
+.main-title {
+    font-family: Mason Chronicles;
+    font-weight: 500;
+    font-size: 76px;
+    line-height: 89px;
+}
+
+.description-container {
+    max-width: 458px;
+}
+
+.main-description {
+    font-size: 14px;
+    line-height: 150%;
+    margin-bottom: ;
+}
+
+.action-button {
+    background-color: #902929;
+    border-radius: 8x;
+    color: #ffffff;
+    border: none;
+    padding: 22px 72px;
+}
+
+.play {
+    background-color: #902929;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: none;
+    position: relative;
+}
+
+.play:before {
+    content: '';
+    width: 132px;
+    height: 132px;
+    border: 50%;
+    background: #902929;
+    opacity: 0.5;
+    position: absolute;
+    left: -16px;
+    top: -16px;
+    margin: auto;
+}
+
+.play-img {
+    position: absolute;
 }
